...

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewWaitDisconnected"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/wait_disconnected"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchWaitDisconnected"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewReturnOnlyFirst"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/return_only_first"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchReturnOnlyFirst"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewBluetooth"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/use_bluetooth"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchBluetooth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewInitialSearch"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/allow_initial_search"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchInitialSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewLaterConnections"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/allow_later_connections"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchLaterConnections"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewPairingFlow"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:text="@string/allow_pairing_flow"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchPairingFlow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewIntentDevices"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_intent_devices"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchIntentDevices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewEnableLogging"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/enable_log"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchEnableLogging"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <TextView
                    android:id="@+id/textViewAllowCameraFallback"
                    android:layout_width="0dp"
                    android:layout_weight="9"
                    android:layout_height="wrap_content"
                    android:text="@string/allow_camera_fallback"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="@color/defaultTextColor"
...

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchAllowCameraFallback"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonFillCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonFillBlackBars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonFillStretch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
...

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggleButtonProvider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toogle_provider_button_all"
                    style="@style/Widget.Material3.Button.OutlinedButton"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSpecific"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/toggle_provider_button_specific"
                    style="@style/Widget.Material3.Button.OutlinedButton"/>

