<resources>
    <string name="app_name">enioka Scan</string>

    <string name="scanner_tester">Scanner tester</string>
    <string name="test_scan">Start scanning</string>
    <string name="settings">Settings</string>

    <string name="github_button">GitHub</string>

    <string name="scanner_search_settings">Settings</string>
    <string name="scanner_general_settings">General</string>
    <string name="wait_disconnected">Wait for busy devices to disconnect</string>
    <string name="return_only_first">Use the first available device</string>
    <string name="use_bluetooth">Use Bluetooth for device search</string>
    <string name="allow_initial_search">Allow initial device search</string>
    <string name="allow_later_connections">Allow later device connections</string>
    <string name="allow_pairing_flow">Allow pairing flow</string>
    <string name="allow_intent_devices">Allow intent devices</string>
    <string name="enable_log">Enable scan history</string>
    <string name="allow_camera_fallback">Default to camera if no scanner is found</string>
    <string name="choose_aspect_ratio_mode">Choose the camera aspect ratio mode. Preserve the proportions by adding black bars or cropping the view. Fill the entire screen by stretching the preview.</string>
    <string name="fill_stretch">stretch</string>
    <string name="fill_black_bars">black bars</string>
    <string name="fill_crop">crop</string>
    <string name="allowed_providers">Allowed Providers</string>
    <string name="excluded_providers">Excluded Providers</string>
    <string name="symbology_selection">Allowed Symbology</string>
    <string name="empty_provider_list_caption">No provider available</string>
    <string name="symbology_selection_caption">empty = all</string>
    <string name="save">Save</string>

    <string name="AthesiHHTProvider">Athesi [SPA45…]</string>
    <string name="AthesiE5LProvider">Athesi [E5L…]</string>
    <string name="BluebirdProvider">Bluebird integrated [EF500…]</string>
    <string name="ProgloveProvider">Proglove [Glove Mark 2…]</string>
    <string name="BT_GeneralScanProvider">GeneralScan BLE ring</string>
    <string name="BT_ZebraOssSPPProvider">Zebra BT Classic [RS5100…]</string>
    <string name="BT_ZebraOssATTProvider">Zebra BT Low Energy [RS5100…]</string>
    <string name="BT_HoneywellOssSppProvider">HoneyWell BT [Voyager 1602…]</string>
    <string name="HoneywellOssIntegratedProvider">HoneyWell integrated [EDA52…]</string>
    <string name="ZebraDwProvider">Zebra DataWedge [TC25, TC27…]</string>

    <string name="barcodeCode128">Code-128</string>
    <string name="barcodeCode39">Code-39</string>
    <string name="barcodeDis25">Discrete 2 of 5</string>
    <string name="barcodeInt25">interleaved 2 of 5</string>
    <string name="barcodeEan13">EAN13</string>
    <string name="barcodeQrCode">QRCode</string>
    <string name="barcodeAztec">Aztec</string>

    <string name="toogle_provider_button_all">All</string>
    <string name="toggle_provider_button_specific">Select</string>
    <string name="toggle_provider_button_none">None</string>

    <string name="expand_provider">expand or shrink provider list</string>
    <string name="expand_symbology">expand or shrink symbology list</string>

    <string name="barcode">barcode</string>
    <string name="fab_settings">settings</string>
</resources>
