...
                android:scaleType="centerCrop"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/barcode" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btScanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:icon="@drawable/upc_scan"
                android:layout_gravity="center"
                android:text="@string/test_scan" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/settings"
                android:layout_gravity="center"
                style="@style/Widget.Material3.Button.OutlinedButton"
...
